# Legitimate-Quantum-Engine

./: GETTING_STARTED.md  MANIFEST.in  PROOF_OF_CLAIMS.md  QUANTUM_DASHBOARD_README.md  QUANTUM_ENGINE_DOCUMENTATION.md  QUANTUM_ENGINE_ENHANCEMENTS_DOCUMENTATION.md  QUANTUM_ENGINE_MEGA_COCKTAIL_DOCS.md  QUANTUM_ENGINE_SUMMARY.md  QUANTUM_NOVEL_TECHNIQUES.md  README.md  ibm_quantum_connection_guide.md  pyproject.toml  qiskit_integration_strategy.md  quantum_advanced_noise_models.py  quantum_api_server.py  quantum_classical_shadows.py  quantum_communities.md  quantum_distributed_computing.py  quantum_engine_mega_cocktail.py  quantum_engine_unified.py  quantum_engine_v2.py  quantum_engine_v3_hardware.py  quantum_engine_v5_unified.py  quantum_error_mitigation.py  quantum_execution_log_v5.json  quantum_extended_gates.py  quantum_ibm_integration.py  quantum_novel_optimization_techniques.py  quantum_portfolio.md  quantum_problem_solvers.py  quantum_sparse_state.py  quantum_tensor_network.py  quantum_test_results.txt  setup.py
hardware_verification/: live_execution_log.json
legitimate_quantum_engine/: __init__.py  quantum_advanced_algorithms.py  quantum_api_server.py  quantum_clifford_simulator.py  quantum_engine_v3_hardware.py  quantum_engine_v4_unified.py  quantum_engine_v5_unified.py  quantum_gpu_accelerator.py  quantum_integration_tests.py  quantum_problem_solvers.py
legitimate_quantum_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
