[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "legitimate-quantum-engine"
version = "5.1.0"
description = "A unified, physics-grounded quantum simulation engine with 15+ optimization techniques, IBM Quantum integration, and realistic noise modeling"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ethan C. Johnson", email = "ethancjohnson0806@gmail.com"}
]
keywords = ["quantum", "computing", "simulation", "VQE", "QAOA", "optimization", "algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
gpu = [
    "cupy>=9.0.0",
]
ibm = [
    "qiskit>=0.36.0",
    "qiskit-ibm-runtime>=0.8.0",
]
ml = [
    "scikit-learn>=0.24.0",
    "pennylane>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/ethancjohnson0806-source/Legitimate-Quantum-Engine"
Documentation = "https://github.com/ethancjohnson0806-source/Legitimate-Quantum-Engine/blob/main/QUANTUM_ENGINE_MEGA_COCKTAIL_DOCS.md"
Repository = "https://github.com/ethancjohnson0806-source/Legitimate-Quantum-Engine.git"
"Bug Tracker" = "https://github.com/ethancjohnson0806-source/Legitimate-Quantum-Engine/issues"

[project.scripts]
quantum-engine = "quantum_engine_v5_unified:main"

[tool.setuptools]
packages = ["legitimate_quantum_engine"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=quantum_engine_v5_unified --cov-report=html"

[tool.coverage.run]
source = ["quantum_engine_v5_unified"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
